# s_rs

./: Cargo.toml
add_workspace/: build.sh
basic/add_workspace/crates/adder/: Cargo.toml
basic/add_workspace/crates/adder/src/: main.rs
basic/async_book/: Cargo.toml
basic/async_book/src/: main.rs
basic/basic/src/: main.rs
basic/branchs/: Cargo.toml
basic/collections/src/: hash_map.rs
basic/concurrency/src/: channel.rs
basic/enumerate/src/: main.rs
basic/features/: Cargo.toml
basic/features/src/: advanced_type.rs  main.rs  unsafe_rust.rs
basic/generic/src/: point.rs
basic/mini_redis/: Cargo.toml
basic/mini_redis/examples/: hello-redis.rs
basic/mini_redis/src/: main.rs
basic/minigrep/src/: search.rs
basic/modules/src/: main.rs
basic/oop/src/: state.rs  trait_object.rs
basic/ownership/src/: main.rs
basic/panic_handle/: Cargo.toml
basic/pattern/: dump.rdb
basic/project-1/src/: main.rs  question_b.rs
basic/re-export-modules/: Cargo.toml
basic/rust_bible/: Cargo.toml
basic/rust_bible/src/: bro.rs  bro_2.rs  lib.rs  lifetime.rs  log.rs  main.rs
basic/rust_bible/src/bro/: bro_child.rs
basic/src/: main.rs
basic/std_study/: Cargo.toml
basic/web_server/: Cargo.toml
branchs/src/: main.rs
collections/src/: main.rs  string.rs  vec.rs
concurrency/src/: child_thread.rs  main.rs  mutual_exclusion.rs
crates/s-actix/: Cargo.toml
crates/s-json/: Cargo.toml
crates/s-log/: Cargo.toml
crates/s-regex/: Cargo.toml
crates/s-request/: Cargo.toml
crates/s-serde/: Cargo.toml
crates/s-server/: Cargo.toml
crates/s-spider/: Cargo.toml
crates/s-tokio/: Cargo.toml
features/src/: advanced_trait.rs  marco.rs  unsafe_rust.rs
ffi/: Cargo.toml  bindings.h  build.rs
ffi/src/: bindings.rs  main.rs
functions/src/: main.rs
generic/src/: point.rs  summary.rs
guess_game/src/: main.rs
hello_macro/: Cargo.toml
hello_macro/hello_marco_proc/: Cargo.toml
hello_macro/src/: arr_macro.rs  lib.rs
iters/src/: main.rs
loops/src/: main.rs
matchs/src/: main.rs
minigrep/src/: lib.rs  main.rs
monorepo/.cargo/: config.toml
monorepo/crates/client/: Cargo.toml  build.rs
oop/src/: main.rs  state_oop.rs
panic_handle/src/: main.rs
pattern/src/: main.rs
project-1/: Cargo.toml
project-1/src/: question_a.rs  question_b.rs
re-export-modules/src/: main.rs
rect/src/: main.rs
rust-for-c/: Cargo.toml  hello  hello.c  rust-for-c.h
rust-for-c/src/: lib.rs
smart_pointer/src/: circular_reference.rs  struct_generic.rs  weak_reference.rs
structs/src/: main.rs
web_server/src/: lib.rs  main.rs
zero2prod/: Cargo.toml  clippy.toml  configuration.json  rustfmt.toml
zero2prod/.sqlx/: query-c3a4e73f889aee87620c0ca6169fc6c61a46917414f5b6d681c08281c0699bfe.json
zero2prod/scripts/: init_db.sh
zero2prod/src/: configuration.rs  lib.rs  main.rs  startup.rs
zero2prod/src/routes/: subscription.rs
zero2prod/tests/: health_check.rs
(+28 files in other folders)
