[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.2", features = ["macros"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
anyhow = "1.0.71"

[dev-dependencies]
reqwest = "0.11.18"

# make link faster
# [target.aarch64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
