[package]
name = "async_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
cute = "0.3.0"
anyhow = "1.0.71"
futures = "0.3.28"
tokio-stream = "0.1.14"