[package]
name = "rust_bible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tracing = "0.1.37"
log = "0.4.18"
color-eyre = "0.6.2"
tracing-subscriber = "0.3.17 "
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
