[package]
name = "monorepo-client-zfk"
version = "0.1.0"
description = "description"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "client-add"
# test = false
# bench = false

# [[bin]]
# name = "client-remove"
# test = false
# bench = false

[dependencies]
monorepo-utils-zfk = { path = "../utils", version = "0.1.0" }
